--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ At Huye you will learn how to make a website. I love and enjoy this course very 
 		<td>61</td>
 	</tr>
 </table>
-<img src="C:\Users\Students\Desktop\SPENCER.jpg" alt="daniel azra" width="300" height="600">
+<img src="C:\Users\Students\Desktop\SPENCER.jpg" alt="daniel ezra" width="300" height="600">
 <a href="ineza.html"><img src="C:\Users\Students\Desktop\SPENCER.jpg" alt="daniel ezra" width="300" height="600"></a>
 
 
