--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<label for="Huye">Huye:</label>
-
+<h1 style="color:blue;">HUYE STUDENTS</h1>
 <textarea id="Huye" name="Huye" rows="4" cols="50">
 At Huye you will learn how to make a website. I love and enjoy this course very much!
 </textarea>
