--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<label for="Huye">Huye:</label>
+	
 <h1 style="color:blue;">HUYE STUDENTS</h1>
 <textarea id="Huye" name="Huye" rows="4" cols="50">
 At Huye you will learn how to make a website. I love and enjoy this course very much!
@@ -51,7 +52,9 @@ At Huye you will learn how to make a website. I love and enjoy this course very 
 </head>
 <body>
 	<label for="Huye">Huye:</label>
-
+<style>
+body {background-color: powderblue;}
+			 </style>
 <textarea id="Huye" name="Huye" rows="4" cols="50">
 At Huye you will learn how to make a website. I love and enjoy this course very much!
 </textarea>
