--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<label for="Huye">Huye:</label>
 	
-<h1 style="color:blue;">HUYE STUDENTS</h1>
+<h1 style="color:red;">HUYE STUDENTS</h1>
 <textarea id="Huye" name="Huye" rows="4" cols="50">
 At Huye you will learn how to make a website. I love and enjoy this course very much!
 </textarea>
@@ -55,7 +55,7 @@ At Huye you will learn how to make a website. I love and enjoy this course very 
 <style>
 body {background-color: powderblue;}
 			 </style>
-<textarea id="Huye" name="Huye" rows="4" cols="50">
+<textarea id="kigali" name="Huye" rows="4" cols="50">
 At Huye you will learn how to make a website. I love and enjoy this course very much!
 </textarea>
 <ol>
