--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,7 @@
 <body>
 	<label for="Huye">Huye:</label>
 
-<textarea id="Huye" name="Huye" rows="4" cols="50">
+<textarea id="Butare" name="Huye" rows="4" cols="50">
 At Huye you will learn how to make a website. I love and enjoy this course very much!
 </textarea>
 <ol>
@@ -15,6 +15,10 @@ At Huye you will learn how to make a website. I love and enjoy this course very 
 	<li> item2</li>
 	<li> item3</li>
 </ol>
+<ol>
+		<li>yes</li>
+		<li>no</li>
+	</ol>
 <ul>
 	<li>banana</li>
 	<li>mango</li>
