--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
+	<h1 style="color:blue;">A Blue Heading</h1>
 	<label for="Huye">Huye:</label>
 
 <textarea id="Butare" name="Huye" rows="4" cols="50">
