--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <meta charset="utf-8">
 </head>
 <body>
-	
-
+	<h1 style="font-size:60px;">WELCOME TO UNIVERSITY OF RWANDA HUYE CAMPUS </h1>
+<br><p>With delight, I warmly welcome you to the website of the University of Rwanda Huye Campus.</p></br>
+	<br><p>Our goal is to educate the next generation of leaders in Rwanda who are prepared and dedicated to building a more just and sustainable world.</p></br>
 	<li> item1</li>
 	<li> item2</li>
 	<li> item3</li>
