--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<u><h1 style="text-align:center; color:blue; font-size:60px;">WELCOME TO UNIVERSITY OF RWANDA HUYE CAMPUS </h1></u>
-<p>With delight, I warmly welcome you to the website of the University of Rwanda Huye Campus.</p>
-	<p>Our goal is to educate the next generation of leaders in Rwanda who are prepared and dedicated to building a more just and sustainable world.</p>
+<p>With delight, I warmly welcome you to the website of the University of Rwanda Huye Campus.
+	Our goal is to educate the next generation of leaders in Rwanda who are prepared and dedicated to building a more just and sustainable world.</p>
 	<li> item1</li>
 	<li> item2</li>
 	<li> item3</li>
