--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<u><h1 style="text-align:center; color:blue; font-size:60px;">WELCOME TO UNIVERSITY OF RWANDA HUYE CAMPUS </h1></u>
-<p>With delight, I warmly welcome you to the website of the University of Rwanda Huye Campus.
+<p style="text-align:center;" >With delight, I warmly welcome you to the website of the University of Rwanda Huye Campus.
 	Our goal is to educate the next generation of leaders in Rwanda who are prepared and dedicated to building a more just and sustainable world.
 	Our mission is to deliver quality education and develop innovative teaching, research and services to community that are addressing societal needs at national, regional and international level.
 	This is in line with the Sustainable Development Goal 4 : quality education, and Rwanda’s aspiration to become a knowledge based economy. 
