--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <meta charset="utf-8">
 </head>
 <body>
-	{
-  background-color: #800000;
-}
-	<u><h1 style="text-align:center; color:black; font-size:60px;">WELCOME TO UNIVERSITY OF RWANDA HUYE CAMPUS </h1></u>
-<p style="text-align:left;" >With delight, I warmly welcome you to the website of the University of Rwanda Huye Campus.Our goal is to educate the next generation of leaders in Rwanda who are prepared and dedicated to building a more just and sustainable world.Our mission is to deliver quality education and develop innovative teaching, research and services to community that are addressing societal needs at national, regional and international level.This is in line with the Sustainable Development Goal 4 : quality education, and Rwanda’s aspiration to become a knowledge based economy. Therefore, University of Rwanda is committed to building an environment that is ‘inclusive and equitable quality education and promote lifelong learning opportunities for all by attracting highly qualified people of all backgrounds to become part of our exciting family as either students or staff.
-	</p>
-	
+
+	<u><h1 style="text-align:center; color:red; font-size:60px;">WELCOME TO NADINE'S LIQUOR STORE </h1></u>
+<p style="text-align:left; color:blue;"
+	Welcome Nadine's Liquor store Where the Best Quality meets Fair Pricing. Our culture has rested on three basic beliefs which we live out every day in the way we serve our customers and each other.
+	</P>
+		       <b><h2 style="text-align:center; color:green;">WINES AND LIQUOR</h2></b>
+		       <h3 stlyle="text-align:right;"Do you know good Vodka? Whether it’s Grey Goose, Smirnoff, Ketel One or Chopin? Or are you a wine lover? 
+		       At SImba we have a wide collection of imported brands so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</h3>
 	
 
 <img src="C:\Users\Students\Desktop\SPENCER.JPG" alt="daniel ezra" width="300" height="600">
