--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	Welcome Nadine's Liquor store Where the Best Quality meets Fair Pricing. Our culture has rested on three basic beliefs which we live out every day in the way we serve our customers and each other.
 	</P>
 		       <b><h2 style="text-align:center; color:green;">WINES AND LIQUOR</h2></b>
-		       <h3 stlyle="text-align:right;"Do you know good Vodka? Whether it’s Grey Goose, Smirnoff, Ketel One or Chopin? Or are you a wine lover? 
+		       <h3 stlyle="text-align:right;">Do you know good Vodka? Whether it’s Grey Goose, Smirnoff, Ketel One or Chopin? Or are you a wine lover? 
 		       At SImba we have a wide collection of imported brands so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</h3>
 	
 
