--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
 <title>page Title Goes Here </title>
 <meta charset="utf-8">
+<style>
+	body{
+		background-color:cyan;
+	}
 </head>
 <body>
 
