--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <style>
 	body{
-		background-color:powderblue;
+		background-color:indianred;
 		color:black;
 	}
 </style>
