--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <title>page Title Goes Here </title>
 <meta charset="utf-8">
 <style>
-	body{
-		background-color:indianred;
-		color:black;
-	}
+	div {
+  background-image: url('bg.jpg');
+}
 </style>
 </head>
 <body>
