--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>page Title Goes Here </title>
 <meta charset="utf-8">
 <style>
-	div {
+	body {
   background-image: url('bg.jpg');
 }
 </style>
