--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <style>
 	body {
-  background-image: url('bg.jpg');
+  background-image: url('background.jpg');
 }
 </style>
 </head>
