--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <style>
 	body {
   background-image: url('background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 </style>
 </head>
