--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <style>
 	body {
-  background-image: url('background.jpg');
+  background-image: url('bg2.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
