--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		       At Nadine's Liquor Sore we have a wide collection of imported brands,<br> so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</p></br>
 	
 
-<img src="C:\Users\Students\Desktop\SPENCER.JPG" alt="daniel ezra" width="300" height="600">
-<a href="ineza.html"><img src="C:\Users\Students\Desktop\SPENCER.JPG" alt="daniel ezra" width="300" height="600"></a>
+<img src="C:\Users\ZIPTECH LTD\Desktop\bel.JPG" alt="liquor" width="300" height="600">
+
 
 </body>
 </html>
