--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
 <meta charset="utf-8">
 <style>
 	body {
-  background-image: url('bg2.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
+  background-color:indianred;
+	}
 </style>
 </head>
 <body>
