--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		       At Nadine's Liquor Sore we have a wide collection of imported brands,<br> so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</p></br>
 	
 
-<img src="bel.JPG" alt="liquor" width="300" height="600">
+<img src="C:\Users\ZIPTECH LTD\Desktop\images\bel.JPG" alt="liquor" width="300" height="600">
 
 
 </body>
