--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</P></i>
 		       <b><h2 style="text-align:center; color:green;">WINES AND LIQUOR</h2></b>
 		       <br><p stlyle="text-align:left; color:white;">Do you know good Vodka? Whether it’s Grey Goose, Smirnoff, Ketel One or Chopin?<br> Or are you a wine lover? <br>
-		       At Nadine's Liquor Sore we have a wide collection of imported brands,<br> so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</p></br>
+		       At Nadine's Liquor Store we have a wide collection of imported brands,<br> so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</p></br>
 	
 
 <img src="C:\Users\ZIPTECH LTD\Desktop\images\bel.JPG" alt="liquor" width="300" height="600">
