changed font size

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 <body>
 <br><br><br><br><br><br>
-<h1 style="text-align:center; color:black; font-size:50px;">NADINE'S LIQUOR STORE </h1>
-<i><p style="text-align:left; color:black;font-size:20px;">
+<h1 style="text-align:center; color:black; font-size:50px;">NADINE'S LIQUOR STORE </h1><br><br><br>
+<i><p style="text-align:left; color:midnightblue;font-size:40px;">
 	Welcome to Nadine's Liquor store Where the Best Quality meets Fair Pricing. Our culture has rested on three basic beliefs which we live out every day in the way we serve our customers and each other.
 	</P></i>
-		       <br><h2 style="text-align:center; color:green;">WINES AND LIQUOR</h2></b>
-		       <br><p stlyle="text-align:left; color:white;">Do you know good Vodka? Whether it’s Grey Goose, Smirnoff, Ketel One or Chopin?<br> Or are you a wine lover? <br>
-		       At Nadine's Liquor Store we have a wide collection of imported brands,<br> so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</p></br>
+		       <br><h2 style="text-align:center; color:lightskyblue;">WINES AND LIQUOR</h2></b>
+		       <h3><br><p stlyle="text-align:left; color:white;">Do you know good Vodka? Whether it’s Grey Goose, Smirnoff, Ketel One or Chopin?<br> Or are you a wine lover? <br>
+		       At Nadine's Liquor Store we have a wide collection of imported brands,<br> so if you wish to get a whiskey or a rum check into any of our stores for a bottle.</p></br></h3>
 	
-<br><br>
+<br><br><br>
 			   <div class="item">
 				<span class="item-title">Hennessy</span>
 				<img class="item-image" src="images/hennessy.jpeg">
